tests/paczka1/small_fuzzy/60924357.err
Error in line 1: lt9 S852 46,3
Error in line 3: XEu4Pm A73 97,2
Error in line 12: hDL1gvibyKF A474 22,0
Error in line 14: hDL1gvibyKF S852 97,6
